<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:elevation="24dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textViewSaveInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/txt_SaveInfo"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewFoundWordsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewFoundWordsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/txt_FoundWordsLabel"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFoundWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:layout_marginLeft="18dp"
        android:text="@string/txt_FoundWordsPlaceholder"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFoundWordsLabel"
        app:layout_constraintLeft_toRightOf="@+id/textViewFoundWordsLabel" />

    <TextView
        android:id="@+id/textViewWordsLeftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_WordsRemainingLabel"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFoundWordsLabel" />

    <TextView
        android:id="@+id/textViewWordsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-4dp"
        android:text="@string/txt_WordsRemainingPlaceholder"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWordsLeftLabel"
        app:layout_constraintLeft_toLeftOf="@+id/textViewFoundWords" />

    <TextView
        android:id="@+id/textViewPlayTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:text="@string/txt_PlayTimeLabel"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordsLeftLabel" />

    <TextView
        android:id="@+id/textViewPlayTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_PlayTimePlaceholder"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPlayTimeLabel"
        app:layout_constraintLeft_toLeftOf="@+id/textViewWordsLeft" />

    <TextView
        android:id="@+id/textViewSaveTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:text="@string/txt_LastSaveTimeLabel"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayTimeLabel" />

    <TextView
        android:id="@+id/textViewSaveTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_LastSaveTimePlaceholder"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSaveTimeLabel"
        app:layout_constraintLeft_toLeftOf="@+id/textViewWordsLeft" />


</android.support.constraint.ConstraintLayout>