...
    <string name="txt_DownloadError">An error occurred downloading latest game data</string>


    <string name="txt_Ok">OK</string>


    <string name="txt_SaveInfo">Game information</string>

    <string name="txt_FoundWordsLabel" translatable="false">Found words:</string>
    <string name="txt_WordsRemainingLabel" translatable="false">Words left:</string>
    <string name="txt_LastSaveTimeLabel">Last played:</string>
    <string name="txt_PlayTimeLabel" translatable="false">Play time:</string>
    <string name="txt_DifficultyLabel" translatable="false">Difficulty:</string>

    <string name="txt_FoundWordsPlaceholder" translatable="false">11</string>
    <string name="txt_WordsRemainingPlaceholder" translatable="false">67</string>
    <string name="txt_LastSaveTimePlaceholder">10/11/17 15:20:14</string>
    <string name="txt_PlayTimePlaceholder" translatable="false">01h 50m 20s</string>
    <string name="txt_DifficultyPlaceholder" translatable="false">VERY EASY</string>

    <string name="txt_Close">Close</string>


    <string name="desc_unclassified">Unclassified</string>
    <string name="desc_boring">Boring</string>
...
    <string name="txt_GuessHint">Song name</string>
    <string name="txt_GuessSubmitBtn">Submit</string>

    <string name="txt_ChooseDifficulty">Select Difficulty</string>
    <string name="txt_ResumeDifficulty">Saved Game Difficulty</string>
    <string name="btntxt_ClearSave">Clear Save</string>
    <string name="btntxt_ViewInfo">Save Info</string>
    <string name="txt_VeryEasy">VERY EASY</string>
    <string name="txt_Easy">EASY</string>
    <string name="txt_Moderate">MODERATE</string>
    <string name="txt_Hard">HARD</string>
    <string name="txt_VeryHard">VERY HARD</string>

...
    <string name="txt_NumberPlaceholder" translatable="false">01</string>
    <string name="txt_TitlePlaceholder" translatable="false">Bohemian Rhapsody</string>
    <string name="txt_ArtistPlaceholder" translatable="false">Queen</string>
    <string name="txt_URLPlaceholder" translatable="false"><a href="https://youtu.be/fJ9rUzIMcZQ">https://youtu.be/fJ9rUzIMcZQ</a></string>

    <string name="txt_QuitTitle">Are you sure you want to quit?</string>
    <string name="txt_Save">Save and quit</string>
    <string name="txt_Quit">Reset and quit</string>
    <string name="txt_Resume">Resume</string>

    <string name="txt_ResetTitle">Are you sure?</string>
    <string name="txt_ResetWarning">All current progress will be lost!</string>
    <string name="txt_YesReset">Yes</string>
...
