...
                                             android:layout_height="match_parent"
                                             android:background="@color/colorPrimaryDark"
                                             tools:context="colinparrott.com.songle.menu.MainActivity">


    <Button
        android:id="@+id/btn_Play"
        android:layout_width="250dp"
        android:layout_height="95dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
...
        android:text="@string/btntxt_ClearSave"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/txt_DifficultyDesc"
        app:layout_constraintTop_toTopOf="@+id/btn_ViewInfo" />

    <Button
        android:id="@+id/btn_ViewInfo"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
...
        android:text="@string/btntxt_ViewInfo"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/txt_DifficultyDesc"
        app:layout_constraintTop_toBottomOf="@+id/txt_Difficulty" />

    <Button
        android:id="@+id/btn_Completed"
        android:layout_width="250dp"
        android:layout_height="95dp"
        android:layout_marginEnd="8dp"
...
